Añado funciones para marca y arreglo añadir vehiculo nuevo
